Table WasteCategories {
  id int [pk, increment] // Primary key
  name varchar
  description varchar
}

Table DisposalGuidelines {
  disposalGuidelineId int [pk, increment] // Primary key
  wasteCategoryId int [ref: > WasteCategories.id] // Foreign key
  guideline varchar
}

Table RecyclingTips {
  recyclingTipId int [pk, increment] // Primary key
  wasteCategoryId int [ref: > WasteCategories.id] // Foreign key
  tip varchar
}
